--- a/index.html
+++ b/index.html
@@ -1,93 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/minireset.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/animations.css" />
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"
-    ></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
     <script defer type="text/javascript" src="js/main.js"></script>
 
     <title>SEETAL ROUT</title>
-  </head>
-  <body>
-    <div
-      id="wallpaper"
-      class="wallpaper"
-      data-image="images/abstract.jpg"
-    ></div>
-    <div class="content">
-      <aside class="side">
-        <figure id="picture" class="picture">
-          <div class="picture-shadow"></div>
-          <img
-            id="pictureImage"
-            class="picture-image"
-            src="images/seetal.jpg"
-            srcset="
-              images/seetal.jpg  1x,
-              <!-- images/alex@2x.jpg 2x,
-              images/alex@3x.jpg 3x -->
-            "
-            alt="Portrait of Alex Jefferson"
-            width="320"
-            height="320"
-          />
-        </figure>
-      </aside>
-      <main class="about">
-        <h1 class="name">Hi, I'm Seetal Rout</h1>
-        <span class="job">Electronics and Communication Engineering</span>
-        <hr class="hr" />
-        <div class="description">
-          <span>
-            An ARMY brat. Grown with discipline and lives in Bhubnaeswar. Currently studying in Silicon University, Bhubnaeswar.
-            I invest my time learning new skills and improving my
-            abilities.
-          </span>
-        </div>
-        <div class="contact">
-          <a class="button" href="mailto:seetalrout607@gmail.com">
-            Get in touch
-          </a>
 
-          <ul class="social">
-            
-            <li>
-              <a href="https://github.com/seetal07">
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/seetal2207/">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </main>
+    <style>
+        /* CSS to style the email address container */
+        .email-address {
+            position: relative;
+            text-align: center;
+            opacity: 0;
+            transform: translateY(-20px);
+            transition: opacity 0.3s, transform 0.3s;
+        }
+
+        .email-text {
+            padding: 10px 20px;
+            border-radius: 5px;
+            display: inline-block;
+        }
+
+        /* CSS to show the email address container */
+        .email-address.show {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    </style>
+</head>
+<body>
+    <div id="wallpaper" class="wallpaper" data-image="images/abstract.jpg"></div>
+    <div class="content">
+        <aside class="side">
+            <figure id="picture" class="picture">
+                <div class="picture-shadow"></div>
+                <img
+                    id="pictureImage"
+                    class="picture-image"
+                    src="images/seetal.jpg"
+                    srcset="images/seetal.jpg  1x"
+                    alt="Portrait of Alex Jefferson"
+                    width="320"
+                    height="320"
+                />
+            </figure>
+        </aside>
+        <main class="about">
+            <h1 class="name">Hi, I'm Seetal Rout</h1>
+            <span class="job">Electronics and Communication Engineering</span>
+            <hr class="hr" />
+            <div class="description">
+                <span>
+                    An ARMY brat. Grown with discipline and lives in Bhubnaeswar. Currently studying in Silicon University, Bhubnaeswar.
+                    I invest my time learning new skills and improving my
+                    abilities.
+                </span>
+            </div>
+            <div class="contact">
+                <button class="button" id="contactButton">Get in touch</button>
+                <div class="email-address hidden" id="emailContainer">
+                    <div class="email-text">seetalrout607@gmail.com</div>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="https://github.com/seetal07">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/seetal2207/">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </main>
     </div>
     <noscript>
-      <style type="text/css">
-        .wallpaper {
-          animation-name: zoomOut;
-        }
-        .picture {
-          animation-name: dropIn;
-        }
-      </style>
+        <style type="text/css">
+            .wallpaper {
+                animation-name: zoomOut;
+            }
+            .picture {
+                animation-name: dropIn;
+            }
+        </style>
     </noscript>
-  </body>
-  <br>
+    <script type="text/javascript">
+        // JavaScript code here
+        function loadImage(id, targetId) {
+            var el = document.getElementById(id);
+            var targetEl = targetId ? document.getElementById(targetId) : el;
+            var imageToLoad;
+
+            if (el.dataset.image) {
+                imageToLoad = el.dataset.image;
+            } else if (typeof el.currentSrc === "undefined") {
+                imageToLoad = el.src;
+            } else {
+                imageToLoad = el.currentSrc;
+            }
+
+            if (imageToLoad) {
+                var img = new Image();
+                img.src = imageToLoad;
+                img.onload = function () {
+                    targetEl.classList.add("is-loaded");
+                };
+            }
+        }
+
+        document.addEventListener("DOMContentLoaded", function () {
+            loadImage("wallpaper");
+            loadImage("pictureImage", "picture");
+
+            // Get references to the button and email address elements
+            var contactButton = document.getElementById("contactButton");
+            var emailContainer = document.getElementById("emailContainer");
+
+            // Add a click event listener to the button
+            contactButton.addEventListener("click", function () {
+                // Toggle the visibility of the email address container
+                emailContainer.classList.toggle("show");
+            });
+        });
+    </script>
+</body>
   <br>
   <br>
   <br>
